packages/rune/fixtures/corpus/invalid/cse-outside-ply.rune
[REQ] order.place(InDto): OutDto
    [CSE] stray
    db:order.save(InDto): OutDto
      timeout
    [RET] OutDto

[DTO] InDto: a
    in

[DTO] OutDto: b
    out
